Lv 11. N+1 없는 카드 수 집계와 저장 시간 (#11)
refactor: 게임 목록조회 N+1문제 개선